Adicionando Cabecalho(Logo e Menu)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,43 @@
 
 	<link rel="shortcut icon" href="img/ico/hp_icon.jpg">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-	<h1>HP Serviços e Manutenção</h1>
+
+<body id="hpPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+	
+	<header>
+		<nav id="hpMainNav" class="navbar navbar-inverse navbar-expand-lg navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#hpPage">HP Serviços e Manutenção</a>
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#hpNavbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>                        
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="hpNavbar">
+					<ul class="nav navbar-nav navbar-right ml-auto">
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">SERVIÇOS</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">PORTFÓLIO</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">SOBRE NÓS</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">NOSSA EQUIPE</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">CONTATO</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
 
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	
+
 </body>
 </html>
