Atualizacao do projeto 24/11/2017

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="css/modal.css">
 </head>
 
 <body id="hpPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -59,7 +60,7 @@
 				</figure>
 				
 				<figure class="item">
-					<<img src="img/4ijpy7eadqw6.jpg" class="img-responsive" width="100%" alt="Serviços HP">
+					<img src="img/4ijpy7eadqw6.jpg" class="img-responsive" width="100%" alt="Serviços HP">
 					<figcaption class="carousel-caption">
 						<div class="intro-saudacao">Bem Vindo a nossa Empresa</div>
 						<div class="saudacao-cabecalho text-uppercase">É um prazer conhece-lo</div>
@@ -95,7 +96,7 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row slideanim">
 			<div class="col-sm-6 col-md-4">
 				<span class="fa-stack fa-4x">
 					<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -134,7 +135,7 @@
 		</div>
 
 		<div class="container">
-			<div class="row">
+			<div class="row slideanim">
 				<div class="col-sm-6 col-md-4">
 					<figure class="thumbnail">
 						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
@@ -149,7 +150,7 @@
 
 				<div class="col-sm-6 col-md-4">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
+						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal2">
 							<img class="img-fluid" src="img/portfolio/forro-drywall.jpg" alt="Portifólio 2">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -161,7 +162,7 @@
 
 				<div class="col-sm-12 col-md-4">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
+						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal3">
 							<img class="img-fluid" src="img/portfolio/gesso-ou-drywall.jpg" alt="Portifólio 3">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -172,10 +173,10 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row slideanim">
 				<div class="col-sm-6 col-md-4">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
+						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal4">
 							<img class="img-fluid" src="img/portfolio/residencial.jpg" alt="Portifólio 4">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -187,7 +188,7 @@
 
 				<div class="col-sm-6 col-md-4">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
+						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal5">
 							<img class="img-fluid" src="img/portfolio/023.jpg" alt="Portifólio 5">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -197,9 +198,9 @@
 					</figure>
 				</div>
 
-				<div class="col-sm-6 col-md-4">
+				<div class="col-sm-12 col-md-4">
 					<figure class="thumbnail">
-						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
+						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal6">
 							<img class="img-fluid" src="img/portfolio/forro-drywall.jpg" alt="Portifólio 6">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -225,17 +226,17 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 mx-auto">
+						<div class="col-lg-8 mx-auto modal-container">
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Project Name</h2>
 								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<img class="img-responsive d-block mx-auto" src="img/portfolio/023_2.jpg" alt="Modal Portifólio 1">
+								<p class="modal-text">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
 								<ul class="list-inline">
-									<li>Date: January 2017</li>
-									<li>Client: Threads</li>
-									<li>Category: Illustration</li>
+									<li class="modal-list-item">Date: January 2017</li>
+									<li class="modal-list-item">Client: Threads</li>
+									<li class="modal-list-item">Category: Illustration</li>
 								</ul>
 								<button class="btn btn-primary" data-dismiss="modal" type="button">
 									<i class="fa fa-times"></i>
@@ -259,13 +260,13 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 mx-auto">
+						<div class="col-lg-8 mx-auto modal-container">
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Project Name</h2>
 								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<img class="img-responsive d-block mx-auto" src="img/portfolio/forro-drywall_2.jpg" alt="Modal Portifólio 2">
+								<p class="modal-text">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
 								<ul class="list-inline">
 									<li>Date: January 2017</li>
 									<li>Client: Explore</li>
@@ -293,13 +294,13 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 mx-auto">
+						<div class="col-lg-8 mx-auto modal-container">
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Project Name</h2>
 								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<img class="img-responsive d-block mx-auto" src="img/portfolio/gesso-ou-drywall_2.jpg" alt="Modal Portifólio 3">
+								<p class="modal-text">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
 								<ul class="list-inline">
 									<li>Date: January 2017</li>
 									<li>Client: Finish</li>
@@ -327,13 +328,13 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 mx-auto">
+						<div class="col-lg-8 mx-auto modal-container">
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Project Name</h2>
 								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<img class="img-responsive d-block mx-auto" src="img/portfolio/residencial_2.jpg" alt="Modal Portifólio 4">
+								<p class="modal-text">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
 								<ul class="list-inline">
 									<li>Date: January 2017</li>
 									<li>Client: Lines</li>
@@ -361,13 +362,13 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 mx-auto">
+						<div class="col-lg-8 mx-auto modal-container">
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Project Name</h2>
 								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<img class="img-responsive d-block mx-auto" src="img/portfolio/023_2.jpg" alt="Modal Portifólio 5">
+								<p class="modal-text">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
 								<ul class="list-inline">
 									<li>Date: January 2017</li>
 									<li>Client: Southwest</li>
@@ -395,17 +396,17 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 mx-auto">
+						<div class="col-lg-8 mx-auto modal-container">
 							<div class="modal-body">
 								<!-- Project Details Go Here -->
 								<h2 class="text-uppercase">Project Name</h2>
 								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-								<img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<img class="img-responsive d-block mx-auto" src="img/portfolio/forro-drywall_2.jpg" alt="Modal portfolio 6">
+								<p class="modal-text">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
 								<ul class="list-inline">
-									<li>Date: January 2017</li>
-									<li>Client: Window</li>
-									<li>Category: Photography</li>
+									<li class="modal-list-item">Date: January 2017</li>
+									<li class="modal-list-item">Client: Window</li>
+									<li class="modal-list-item">Category: Photography</li>
 								</ul>
 								<button class="btn btn-primary" data-dismiss="modal" type="button">
 									<i class="fa fa-times"></i>
