Atulalizãcao do projeto 27/11/2017 - 2

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<link rel="stylesheet" type="text/css" href="css/modal.css">
+	<link rel="stylesheet" type="text/css" href="css/parallax.css">
 </head>
 
 <body id="hpPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -125,6 +126,8 @@
 			</div>
 		</div>
 	</section>
+
+	<div class="parallax-1"></div>
 
 	<section id="portfolio" class="container-fluid bg-grey text-center">
 		<div class="row">
@@ -244,6 +247,43 @@
 							<p class="text-muted">Eu sou Pica</p>
 						</figcaption>
 					</figure>
+				</div>
+			</div>
+		</div>
+
+		<div class="row text-center">
+			<div class="col-sm-12">
+				<br><h2>Depoimentos de nossos clientes</h2>
+				<div id="carouselDepoimentos" class="carousel slide text-center" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#carouselDepoimentos" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselDepoimentos" data-slide-to="1"></li>
+						<li data-target="#carouselDepoimentos" data-slide-to="2"></li>
+					</ol>
+
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+							<h4>"This company is the best. I am so happy with the result!"<br><span style="font-style:normal;">Michael Roe, Vice President, Comment Box</span></h4>
+						</div>
+						<div class="item">
+							<h4>"One word... WOW!!"<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
+						</div>
+						<div class="item">
+							<h4>"Could I... BE any more happy with this company?"<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
+						</div>
+					</div>
+
+					<!-- Left and right controls -->
+					<a class="left carousel-control" href="#carouselDepoimentos" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#carouselDepoimentos" role="button" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</div>
 		</div>
