Atualizacao do projeto 28/11/2017

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#servicos">SERVIÇOS</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">PORTFÓLIO</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre-nos">SOBRE NÓS</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">UNIDADES</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">CONTATO</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#unidades">UNIDADES</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contato">CONTATO</a></li>
 					</ul>
 				</div>
 			</div>
@@ -127,7 +127,17 @@
 		</div>
 	</section>
 
-	<div class="parallax-1"></div>
+	<div class="parallax-1">
+		<div class="container fadeIn">
+			<div class="row">
+				<div class="col-sm-12 mx-auto text-center">
+					<span class="text-parallax">O nosso <span class="text-parallax-red">trabalho</span> é encontrar esse equilíbrio perfeito entre <span class="text-parallax-red">design</span> e <span class="text-parallax-red">funcionalidade.</span>
+					<hr class="hr-parralax-red">
+					<a id="btn-parallax" class="btn btn-primary btn-parallax-red" href="#portfolio">Como Nós Trabalhamos</a>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<section id="portfolio" class="container-fluid bg-grey text-center">
 		<div class="row">
@@ -325,7 +335,7 @@
 				<p>Entre em contato conosco. Nós retornaremos pra você em até 24 horas.</p>
 				<p><span class="glyphicon glyphicon-map-marker"></span> Piabeta, Duque de Caxias / RJ</p>
 				<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999</p>
-				<p><span class="glyphicon glyphicon-envelope"></span> meupenisereto@gmail.com</p>
+				<p><span class="glyphicon glyphicon-envelope"></span> hpservicos@gmail.com</p>
 			</div>
 			<div class="col-sm-7 slideanim">
 				<div class="row">
@@ -342,6 +352,60 @@
 						<button class="btn btn-primary pull-right" type="submit">Enviar</button>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="unidades" class="container-fluid bg-grey container-maps">
+		<div class="row">
+			<div class="col-sm-5 thumbnail">
+				<!-- Add Google Maps -->
+				<div id="googleMap" style="height:400px;width:100%;"></div>
+				<script>
+					function myMap() {
+						var myCenter = new google.maps.LatLng(-22.608500, -43.183562);
+						var mapProp = {center:myCenter, zoom:15, scrollwheel:true, draggable:true, mapTypeId:google.maps.MapTypeId.ROADMAP};
+						var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+						var marker = new google.maps.Marker({position:myCenter});
+						marker.setMap(map);
+					}
+				</script>
+				<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwmI9wjAsMKEFJovIfRm-5cIGAPbCLw3I&callback=myMap"></script>				
+			</div>
+			<div class="col-sm-7">
+				<h2 class="titulo-secao">UNIDADES</h2><br>
+				<ul class="nav nav-pills nav-stacked">
+					<li>
+						<div class="row">
+							<a href="#">
+								<div class="col-sm-12">
+									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Gov. Roberto Silveira, 364 - Parque Veneza  / Magé - RJ / CEP: 25903-587</p>
+									<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> hpservicos@gmail.com</p>
+								</div>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div class="row">
+							<a href="#">
+								<div class="col-sm-12">
+									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Gov. Roberto Silveira, 364 - Parque Veneza  / Magé - RJ / CEP: 25903-587</p>
+									<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> hpservicos@gmail.com</p>
+								</div>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div class="row">
+							<a href="#">
+								<div class="col-sm-12">
+									<p><span class="glyphicon glyphicon-map-marker"></span> Av. Gov. Roberto Silveira, 364 - Parque Veneza  / Magé - RJ / CEP: 25903-587</p>
+									<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999 <span class="glyphicon glyphicon-envelope unidade-email-maps"></span> hpservicos@gmail.com</p>
+								</div>
+							</a>
+						</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</section>
